@@ -7,6 +7,7 @@ external_libs = {
     "subunit": "subunit/python/subunit",
     "testtools": "testtools/testtools",
     "extras": "extras/extras",
+    "mimeparse": "mimeparse",
     }
 
 list = []
