@@ -8,6 +8,7 @@ import base64
 import re
 sys.path.insert(0, "bin/python")
 import samba
+samba.ensure_external_module("mimeparse", "mimeparse")
 samba.ensure_external_module("extras", "extras")
 samba.ensure_external_module("testtools", "testtools")
 samba.ensure_external_module("subunit", "subunit/python")
