@@ -39,6 +39,7 @@ sys.path.insert(0, "bin/python")
 
 import optparse
 import samba
+samba.ensure_external_module("mimeparse", "mimeparse")
 samba.ensure_external_module("extras", "extras")
 samba.ensure_external_module("testtools", "testtools")
 samba.ensure_external_module("subunit", "subunit/python")
